[build-system]
requires = [
    "setuptools>=42",
    "scikit-build",
    "cmake",
    "ninja",           # Optional, but faster builds
    "numpy"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# Only build on CPython 3.8 and 3.9 for faster testing
build = "cp38-* cp39-*"

# Disable free-threading builds on all platforms
skip = "cp3??t-*"

# On an Linux Intel runner with qemu installed, build Intel and ARM wheels
[tool.cibuildwheel.linux]
archs = ["auto", "aarch64"]
