[build-system]
requires = [
    "setuptools>=42",
    "scikit-build",
    "cmake",
    "ninja",           # Optional, but faster builds
    "numpy"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# Only build on CPython 3.8 and 3.9 for faster testing
build = "cp38-* cp39-*"

# Disable free-threading builds on all platforms
skip = "cp3??t-*"

[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair --platform manylinux2014_x86_64 . -w {dest_dir} {wheel}"
