[build-system]
requires = [
    "setuptools>=42",
    "scikit-build",
    "cmake",
    "ninja",           # Optional, but faster builds
    "numpy"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp38-* cp39-*"
# Disable free-threading builds on all platforms
skip = "cp3??t-*"

